--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-        <title>Bowling Score Calculator</title>
+        <title>Bowling Score Calculator V1.0</title>
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
         <style>
